Update build & gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,10 @@ android {
 }
 
 dependencies {
-  compile 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
-  compile parent.ext.libAppCompat
-  compile parent.ext.libSupportDesign
-  compile parent.ext.libPicasso
+  implementation 'com.github.jorgecastilloprz:fabprogresscircle:1.01@aar'
+  implementation parent.ext.libAppCompat
+  implementation parent.ext.libSupportDesign
+  implementation parent.ext.libPicasso
   //  compile parent.ext.libFabMakovkastar
   //  compile parent.ext.libFabFutureSimple
 }
