--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
   repositories {
     jcenter()
+      google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.3'
+    classpath 'com.android.tools.build:gradle:3.1.0'
   }
 }
 
@@ -23,18 +24,18 @@ allprojects {
 allprojects {
   ext {
     // Android config
-    androidCompileSdkVersion = 22
-    androidBuildToolsVersion = "22.0.1"
-    androidMinSdkVersion = 11
-    androidTargetSdkVersion = 22
+    androidCompileSdkVersion = 27
+    androidBuildToolsVersion = "27.0.3"
+    androidMinSdkVersion = 14
+    androidTargetSdkVersion = 27
     androidApplicationId = 'com.github.jorgecastilloprz.fabprogresscircle'
     androidVersionCode = 3
     androidVersionName = '1.01'
 
     // Libraries
-    libAppCompat = 'com.android.support:appcompat-v7:22.0.0'
-    libSupportDesign = 'com.android.support:design:22.2.0'
-    libSupport = 'com.android.support:support-v4:22.2.0'
+    libAppCompat = 'com.android.support:appcompat-v7:27.0.2'
+    libSupportDesign = 'com.android.support:design:27.0.2'
+    libSupport = 'com.android.support:support-v4:27.0.2'
     libPicasso = 'com.squareup.picasso:picasso:2.5.2'
     libFabMakovkastar = 'com.melnykov:floatingactionbutton:1.3.0'
     libFabFutureSimple = 'com.getbase:floatingactionbutton:1.9.0'
@@ -46,6 +47,7 @@ allprojects {
 
   repositories {
     jcenter()
+      google()
   }
 }
 
